fixtures/uitests/tests/ui/non_hashable_record_key.stderr
error[E0277]: the trait bound `f32: std::cmp::Eq` is not satisfied
  --> $OUT_DIR[uniffi_uitests]/records.uniffi.rs
   |
   | uniffi::deps::static_assertions::assert_impl_all!(f32: ::std::cmp::Eq, ::std::hash::Hash); // record<f32, u64>
   |                                                   ^^^ the trait `std::cmp::Eq` is not implemented for `f32`
   |
   = help: the following other types implement trait `std::cmp::Eq`:
             i128
             i16
             i32
             i64
             i8
             isize
             u128
             u16
           and 4 others
note: required by a bound in `assert_impl_all`
  --> $OUT_DIR[uniffi_uitests]/records.uniffi.rs
   |
   | uniffi::deps::static_assertions::assert_impl_all!(f32: ::std::cmp::Eq, ::std::hash::Hash); // record<f32, u64>
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_impl_all`
   = note: this error originates in the macro `uniffi::deps::static_assertions::assert_impl_all` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `f32: Hash` is not satisfied
  --> $OUT_DIR[uniffi_uitests]/records.uniffi.rs
   |
   | uniffi::deps::static_assertions::assert_impl_all!(f32: ::std::cmp::Eq, ::std::hash::Hash); // record<f32, u64>
   |                                                   ^^^ the trait `Hash` is not implemented for `f32`
   |
   = help: the following other types implement trait `Hash`:
             i128
             i16
             i32
             i64
             i8
             isize
             u128
             u16
           and 4 others
note: required by a bound in `assert_impl_all`
  --> $OUT_DIR[uniffi_uitests]/records.uniffi.rs
   |
   | uniffi::deps::static_assertions::assert_impl_all!(f32: ::std::cmp::Eq, ::std::hash::Hash); // record<f32, u64>
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_impl_all`
   = note: this error originates in the macro `uniffi::deps::static_assertions::assert_impl_all` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0425]: cannot find function `get_dict` in this scope
  --> $OUT_DIR[uniffi_uitests]/records.uniffi.rs
   |
   |     <std::collections::HashMap<f32, u64> as uniffi::FfiConverter>::lower(r#get_dict())
   |                                                                          ^^^^^^^^^^ not found in this scope

error[E0277]: the trait bound `f32: Hash` is not satisfied
  --> $OUT_DIR[uniffi_uitests]/records.uniffi.rs
   |
   |     <std::collections::HashMap<f32, u64> as uniffi::FfiConverter>::lower(r#get_dict())
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Hash` is not implemented for `f32`
   |
   = help: the following other types implement trait `Hash`:
             i128
             i16
             i32
             i64
             i8
             isize
             u128
             u16
           and 4 others
   = note: required for `HashMap<f32, u64>` to implement `RustBufferFfiConverter`

error[E0277]: the trait bound `f32: std::cmp::Eq` is not satisfied
  --> $OUT_DIR[uniffi_uitests]/records.uniffi.rs
   |
   |     <std::collections::HashMap<f32, u64> as uniffi::FfiConverter>::lower(r#get_dict())
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `std::cmp::Eq` is not implemented for `f32`
   |
   = help: the following other types implement trait `std::cmp::Eq`:
             i128
             i16
             i32
             i64
             i8
             isize
             u128
             u16
           and 4 others
   = note: required for `HashMap<f32, u64>` to implement `RustBufferFfiConverter`
